<resources>

    <string name="app_name">Bessties</string>

    <!--Scan screen-->
    <string name="scan_ticket">Scan ticket</string>
    <string name="queue_skip_button">Verder gaan</string>

    <!--Login screen-->
    <string name="login_title">Maak een account</string>
    <string name="login_first_name">Voornaam</string>
    <string name="login_last_name">Achternaam</string>
    <string name="login_age">Leeftijd</string>
    <string name="login_to_profile">Ga naar profiel</string>
    <string name="login_skip_button">Button</string>
    <!--Login invalid-->
    <string name="firstname_invalid">De gegeven voornaam is niet geldig</string>
    <string name="lastname_invalid">De gegeven achternaam is niet geldig</string>
    <string name="age_invalid">U bent te jong</string>

    <!--Profile screen-->
    <string name="profile_search_buddy">Zoek Besstie</string>
    <string name="profile_title">Profiel overzicht</string>

    <!--Queue screen-->
    <string name="queue_first_name">First name</string>
    <string name="queue_last_name">Last name</string>
    <string name="queue_age">Age</string>
    <string name="queue_found_buddy">Besstie gevonden</string>
    <string name="queue_search_again">Opnieuw zoeken</string>

    <!--Buddy screen-->
    <string name="buddy_meet_buddy">Ontmoet jouw besstie bij de ingang. Hier vindt u het volgende bord:</string>
    <string name="buddy_start">Starten</string>
    <string name="buddy_map_description">BesstieLocationMap</string>

    <!--To game screen-->
    <string name="to_game_to_location">Ga naar de locatie van het spel</string>
    <string name="to_game_hint">Hint!</string>
    <string name="to_game_found">Gevonden!</string>
    <string name="hint_text">Paden met wanden van heg, \n
                        Vele opties maar slechts een weg, \n
                        De in- en uitgang aan de rand, \n
                        Het kan enkel worden opgelost hand in hand.</string>

    <!--Game info screen-->
    <string name="game_info_title">Game informatie</string>
    <string name="game_info_text">\Welkom in het doolhof. \nOm dit spel te halen zullen jullie moeten samenwerken. Het spel is simpel, vind de weg door het doolhof en navigeer jezelf naar het einde. \nHet probleem is dat je niet samen door het doolhof kan navigeren. Om dit op te lossen zal een persoon het doolhof navigeren en de andere het doolhof observeren. De observant moet aanwijzingen geven, zodat er veilig het doolhof uit kan worden genavigeerd. Bij contact met een muur zal er een buzzer afgaan om aan te geven dat je niet verder kan in de gewenste richting. \nNa het ontsnappen zal er een nieuw doolhof ontstaan waarbij je een kortere tijd hebt om te ontsnappen. Weinigen van jullie is het al gelukt veilig het doolhof te ontsnappen. Weet jij het doolhof te overmeesteren? Heel veel plezier en succes.</string>    <string name="game_info_start_button">Start spel</string>

    <!--Game complete screen-->
    <string name="game_complete_title">Spel voltooid</string>
    <string name="game_complete_text">\Gefeliciteerd!!! \nJe bent veilig het doolhof uitgekomen. Wees trots op elkaar en bedank elkaar. \nVond je zelf dat het allemaal iets te langzaam ging of vonden jullie het zo leuk dat jullie het nog een keer willen proberen. Kom later dan nog een keer terug en kijk hoe ver jullie vooruit kunnen gaan en of jullie je score kunnen verbeteren! </string>
    <string name="newGameButton_text">Nieuw spel</string>

    <!--Waiting screen -->
    <string name="buddySearchText" >Besstie zoeken...</string>
    <string name="inGameText" >Spel is bezig...</string>

    <!--Menu bar-->
    <string name="backToProfile">Vorige pagina</string>
    <string name="go_back">Ga terug</string>

    <!--Ongebruikte strings, kan het verwijdert worden?-->
        <string name="userFirstName"> </string>
        <string name="userLastName"> </string>
        <string name="userAge"> </string>
        <string name="to_queue">Ga naar je profiel</string>

    <string-array name="spel_uitleg">
        <item>Los het doolhof op</item>
        <item>Ga terug naar scherm</item>
    </string-array>
</resources>