<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuddyInfo_Activity">

    <Button
        android:id="@+id/ToBuddyLocation"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:onClick="openBuddyLocation"
        android:text="@string/queue_skip_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Retry"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:onClick="retryQueue"
        android:text="@string/queue_search_again"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ToBuddyLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="240dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/add_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_Title">

        <ImageView
            android:id="@+id/image_found_buddy"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:translationX="25dp"
            android:translationY="50dp"
            app:srcCompat="@drawable/avatar_icon" />

        <!--        <TextView-->
        <!--            android:id="@+id/foundBuddy_lastName"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/queue_last_name"-->
        <!--            android:textSize="20sp"-->
        <!--            android:translationX="200dp"-->
        <!--            android:translationY="100dp" />-->

        <TextView
            android:id="@+id/foundBuddy_firstName"
            android:layout_width="127dp"
            android:layout_height="82dp"
            android:text="@string/queue_first_name"
            android:textSize="20sp"
            android:translationX="200dp"
            android:translationY="50dp" />

        <TextView
            android:id="@+id/foundBuddy_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue_age"
            android:textSize="20sp"
            android:translationX="200dp"
            android:translationY="150dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/queue_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/queue_found_buddy"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>