<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LogIn_Activity">

    <TextView
        android:id="@+id/login_top"
        android:layout_width="413dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="3dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/login_first_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/loginBox"
        app:layout_constraintStart_toStartOf="@+id/loginBox"
        app:layout_constraintTop_toTopOf="@+id/loginBox" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/login_last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ageInput"
        app:layout_constraintEnd_toEndOf="@+id/loginBox"
        app:layout_constraintStart_toStartOf="@+id/loginBox"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="3dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/login_age"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="@+id/loginBox"
        app:layout_constraintStart_toStartOf="@+id/loginBox" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/avatar_icon"
        app:layout_constraintBottom_toTopOf="@+id/toProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBox"
        tools:srcCompat="@drawable/avatar1" />

    <ImageButton
        android:id="@+id/left_picture_button"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:background="@android:color/transparent"
        android:onClick="leftArrowButton"
        app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
        app:layout_constraintEnd_toStartOf="@+id/profilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilePicture"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/right_picture_button"
        android:layout_width="0dp"
        android:layout_height="129dp"
        android:background="@android:color/transparent"
        android:onClick="rightArrowButton"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePicture"
        app:layout_constraintTop_toTopOf="@+id/profilePicture"
        app:srcCompat="@drawable/ic_baseline_arrow_left_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/toProfileButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="#213495"
        android:backgroundTint="#213495"
        android:onClick="openProfile"
        android:text="@string/login_to_profile"
        android:textSize="24sp"
        app:iconTint="#213495"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profilePicture"
        app:layout_constraintStart_toStartOf="@+id/profilePicture" />

    <Button
        android:id="@+id/tempButton_skipLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:onClick="volgend"
        android:text="@string/login_skip_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toProfileButton" />

    <View
        android:id="@+id/loginBox"
        android:layout_width="280dp"
        android:layout_height="180dp"
        android:layout_marginStart="-5dp"
        android:background="@drawable/add_clear_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>